creates tree traversal to entity